--- a/admin.html
+++ b/admin.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
+  <!--
+  Project: FussionComm ICT Website (Preview)
+  Author: Dumitrița Zancanu, © 2025 — Preview Only
+  Contact: zancanudumitrita@gmail.com
+  Note: This is a protected preview version. Redistribution prohibited.
+-->
+<meta name="author" content="Dumitrița Zancanu">
+<meta name="copyright" content="© 2025 Dumitrița Zancanu">
+<meta name="robots" content="noindex, nofollow">
+
 <meta charset="UTF-8" />
 <title>FussionComm ICT — Solutions for Startups & SMEs</title>
 <meta name="description" content="Fast, scalable, easy-to-manage websites. Web development, UX, SEO & maintenance.">
@@ -1130,5 +1140,11 @@ document.getElementById('saveCompany')?.addEventListener('click', async ()=>{
 
 <script defer src="assets/cookie.js"></script>
 
+<!-- WATERMARK_PREVIEW_ONLY -->
+<div id="wm-preview-only" style="pointer-events:none;position:fixed;inset:0;display:grid;place-items:center;opacity:.12;
+font:700 4rem/1 sans-serif;transform:rotate(-20deg);z-index:999999;">
+  © Dumitrița Zancanu — Preview Only
+</div>
+<script>document.getElementById('yearSpanB')&&(document.getElementById('yearSpanB').textContent=new Date().getFullYear());</script>
 </body>
 </html>
