--- a/privacy.html
+++ b/privacy.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!--
+  Project: FussionComm ICT Website (Preview)
+  Author: Dumitrița Zancanu, © 2025 — Preview Only
+  Contact: zancanudumitrita@gmail.com
+  Note: This is a protected preview version. Redistribution prohibited.
+-->
+<meta name="author" content="Dumitrița Zancanu">
+<meta name="copyright" content="© 2025 Dumitrița Zancanu">
+<meta name="robots" content="noindex, nofollow">
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Privacy Policy — FussionComm ICT</title>
@@ -87,5 +97,11 @@
   document.getElementById('last-updated').textContent =
     'Last updated: ' + new Date().toLocaleDateString();
 </script>
+<!-- WATERMARK_PREVIEW_ONLY -->
+<div id="wm-preview-only" style="pointer-events:none;position:fixed;inset:0;display:grid;place-items:center;opacity:.12;
+font:700 4rem/1 sans-serif;transform:rotate(-20deg);z-index:999999;">
+  © Dumitrița Zancanu — Preview Only
+</div>
+<script>document.getElementById('yearSpanB')&&(document.getElementById('yearSpanB').textContent=new Date().getFullYear());</script>
 </body>
 </html>
